--- a/src/initial_condition_generation/Gendata2D.ipynb
+++ b/src/initial_condition_generation/Gendata2D.ipynb
@@ -530,7 +530,7 @@
    "source": [
     "# User defined grid parameters\n",
     "H_min = -500\n",
-    "Lx = 150e3 ## Set to 600e3\n",
+    "Lx = 150e3\n",
     "Ly = 25\n",
     "\n",
     "dz = 1\n",
@@ -4109,7 +4109,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('irminger-proj': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
