--- a/src/post_processing/understanding_mld.ipynb
+++ b/src/post_processing/understanding_mld.ipynb
@@ -723,7 +723,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('irminger-proj': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -737,9 +737,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "441b8a721f432bf94f3d9977bf04ba464ec3fb12bde854fb368a63bed59c50dd"
@@ -747,5 +746,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
